--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: red;
+            background-color: yellow;
+            font-size: 50px;
+        }
+    </style>
 </head>
 <body>
-    <h1>this is my first application</h1>
+    <h1>this is html file</h1>
 </body>
 </html>
